--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "conce",
+  "name": "foccus",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,14 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
-    "jest": "^27.2.0",
-    "next": "11.1.2",
-    "next-pwa": "^5.3.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "jest": "^27.5.1",
+    "next": "14.2.25",
+    "next-pwa": "^5.6.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2"
+    "eslint-config-next": "14.2.25"
   }
 }
